Extend GetNote method
