# pkg/api/openapi/notpastebin.swagger.json
@@ -16,7 +16,7 @@
     "application/json"
   ],
   "paths": {
-    "/createnote": {
+    "/note/create": {
       "post": {
         "operationId": "NotPasteBin_CreateNote",
         "responses": {
@@ -48,7 +48,7 @@
         ]
       }
     },
-    "/deletenote": {
+    "/note/delete": {
       "post": {
         "operationId": "NotPasteBin_DeleteNote",
         "responses": {
@@ -81,7 +81,7 @@
         ]
       }
     },
-    "/getnote": {
+    "/note/get": {
       "post": {
         "operationId": "NotPasteBin_GetNote",
         "responses": {
@@ -113,7 +113,7 @@
         ]
       }
     },
-    "/updatenote": {
+    "/note/update": {
       "post": {
         "operationId": "NotPasteBin_UpdateNote",
         "responses": {
@@ -187,6 +187,12 @@
       "type": "object",
       "properties": {
         "text": {
+          "type": "string"
+        },
+        "isAdmin": {
+          "type": "boolean"
+        },
+        "readerHash": {
           "type": "string"
         }
       }
